# CigerTool

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-iso.yml  build-release.yml
app/CigerTool.App/: App.xaml  MainWindow.xaml  MainWindow.xaml.cs  app.manifest  appsettings.json
app/CigerTool.App/Behaviors/: SmoothScrollBehavior.cs
app/CigerTool.App/Composition/: AppBootstrapper.cs
app/CigerTool.App/Models/: NavigationTarget.cs
app/CigerTool.App/Styles/: Colors.xaml  Controls.xaml
app/CigerTool.App/ViewModels/: ShellViewModel.cs
cigertool/: __init__.py  __main__.py  app.py  app.tcss  app_context.py  commands.py  config.py  i18n.py  logger.py  models.py
cigertool/services/: __init__.py  boot_service.py  clone_service.py  disk_service.py  execution_service.py  log_service.py  multiboot_service.py  resize_service.py  smart_service.py  system_service.py  tools_service.py
cigertool/ui/: __init__.py  base.py  clone_page.py  info_pages.py  main_window.py  maintenance_pages.py  scan_page.py  style.py  workers.py
core/CigerTool.Application/Contracts/: IDiskBenchmarkService.cs  IDiskSurfaceScanService.cs  (+2 more)
docs/: FEATURE_SCOPE.md  KULLANIM.md  MIMARI.md  RELEASE_CHECKLIST.md  RELEASE_PLAN.md  STATUS.md  WINPE_BUILD.md
iso-library/: README.md
isos/: README.md
scripts/: build_iso.sh  write_usb.sh
tests/: test_clone_service.py  test_disk_service.py  test_generate_grub_menu.py  test_multiboot_service.py  test_preboot_assets.py  test_release_pipeline.py  test_release_workflow.py  test_workspace_pipeline.py
tools/: README.md
(+47 files in other folders)
