[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cigertool"
version = "0.1.0"
description = "Turkce, menulu disk klonlama ve Windows tasima araci"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "CigerTool Contributors" },
]
dependencies = [
  "textual==8.2.0",
]

[project.scripts]
cigertool = "cigertool.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
cigertool = ["app.tcss"]
